--- a/style.css
+++ b/style.css
@@ -151,3 +151,48 @@ button {
     grid-area: 1/7/2/8;
 } 
 
+/* 移动端特别优化 */
+@media screen and (max-width: 390px), 
+       screen and (max-device-width: 390px) {
+    #game-boy-emulator {
+        padding: 10px;
+    }
+    
+    #button-container {
+        gap: 3px;
+        grid-template-rows: repeat(3, 35px);
+    }
+    
+    button {
+        font-size: 16px;
+        /* 确保触摸区域足够大 */
+        min-height: 44px;
+        transform: scale(0.8);
+        transform-origin: center;
+    }
+    
+    #game-boy-text {
+        font-size: 30px;
+    }
+}
+
+/* 处理设备像素比 */
+@media screen and (-webkit-min-device-pixel-ratio: 2),
+       screen and (min-resolution: 192dpi) {
+    button {
+        border-width: 0.5px;
+    }
+}
+
+@media screen and (-webkit-min-device-pixel-ratio: 3),
+       screen and (min-resolution: 288dpi) {
+    button {
+        border-width: 0.33px;
+    }
+}
+
+/* 禁用移动端的触摸高亮 */
+* {
+    -webkit-tap-highlight-color: transparent;
+}
+
