--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ main {
     flex-direction: column;
     align-items: center;
     width: fit-content;
+    max-width: 340px;
     /* height:550px; */
     background-color: rgb(255, 255, 255); 
     border: 1px solid rgb(0, 0, 0); 
