--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ button {
         }
 
         #left {
-            text-color: red;
+            color: red;
             border-right: none;
             font-size: 10px;
         }
