--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ main {
     box-shadow: rgba(233, 233, 233, 0.8) 0px 0px 20px;
 }
 
-#game-cotainer {
+#game-container {
     width: 300px;
     height: 300px;
     /* justify-content: center; */
