--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ button {
         }
 
         #left {
-            color: red;
+            
             border-right: none;
             font-size: 10px;
         }
@@ -209,6 +209,7 @@ button {
             width: 30px;
             height: 30px;
             border-radius: 30px;
+            text-align: center;
         }
 
 }
