--- a/style.css
+++ b/style.css
@@ -210,6 +210,9 @@ button {
             height: 30px;
             border-radius: 30px;
             text-align: center;
+            align-items: center;
+            justify-content: center;
+            appearance: none;
         }
 
 }
